# glacier

./: .gitignore  Cargo.toml  README.md  graphics.rs  my_song.toml
assets/fonts/: OFL.txt
assets/projects/: dev.toml  example_project.toml  my_project.toml  new_song.toml  two_songs_project.toml
docs/: AUDIO.md  UI.md
glacier-app/: Cargo.toml
glacier-app/src/: app.rs  audio.rs  config.rs  main.rs  project.rs
glacier-app/src/graphics/: color.rs  drag.rs  draw.rs  font.rs  icons.rs  mod.rs  primitives.rs  widgets.rs
glacier-app/src/graphics/components/: footer.rs  mod.rs  toolbar.rs
glacier-app/src/graphics/context_menu/: mod.rs
glacier-app/src/graphics/mini_window/: mixer.rs  playlist.rs  sequencer.rs  track.rs
glacier-app/src/graphics/modal/: mod.rs
glacier-dsp/: Cargo.toml
glacier-dsp/src/: lib.rs
projects/: two_songs_project.toml
src/: app.rs  audio.rs  color.rs  colors.rs  config.rs  dsp.rs  graphics.rs  main.rs  project.rs  render.rs  shader.wgsl  ui.rs
src/graphics/: color.rs  drag.rs  draw.rs  font.rs  icons.rs  mixer.rs  mod.rs  playlist.rs  primitives.rs  sequencer.rs  toolbar.rs  ui.rs  widgets.rs
src/graphics/components/: footer.rs  mod.rs  pattern_tray.rs  playlist_tray.rs  toolbar.rs  track_tray.rs
src/graphics/components/side_panel/: mod.rs  pattern_tray.rs  (+1 more)
src/graphics/context_menu/: mod.rs
src/graphics/mini_window/: instrument.rs  mixer.rs  mod.rs  piano_roll.rs  playlist.rs  sequencer.rs  track.rs
src/graphics/modal/: mod.rs
src/graphics/windows/: instrument.rs  mixer.rs  mod.rs  playlist.rs  sequencer.rs
(+10 files in other folders)
