[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

[features]
default = []
# turn on when compiling for browsers while waiting for webgpu
# to get proper support
webgl = ["wgpu/webgl"]

[dependencies]
winit = { version = "0.30.12" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "25" }
glyphon = "0.9"
pollster = {version ="0.4.0"}
bytemuck = { version = "1.24", features = [ "derive" ] }
cpal = "0.17.3"
hound = "3.5.1"
ringbuf = "0.4.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
